# blindspot-summer-2026

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  blindspot_Annotation_Template.docx  blindspot_Paper_Presentation_Template.pptx  workflow_full_test.md
docs/botsort-integration/: BOTSORT_INTEGRATION.md
docs/schedules/: README.md
docs/setup/: CHRISTINE_QUICKSTART.md  DOWNLOADS.md  FLOYD_QUICKSTART.md  GITHUB_WORKFLOW_GUIDE.md  GROUP_COLLABORATION.md  IMPLEMENTATION.md  LOCAL_PATHS.template.md  PYTHON_ENVIRONMENT.md  REAL_DATA_IMPLEMENTATION_PLAN.md  RESEARCHER_SETUP.md  SABRINA_PR_REVIEW.md  SABRINA_QUICKSTART.md  STUDENT_SETUP.md  WEEK1_STUDENT_WALKTHROUGH.md
docs/templates/: PULL_REQUEST_TEMPLATE.md  RUN_LOG_TEMPLATE.md
docs/weekly-briefs/: RESEARCHER_ALL_WEEKS_TASKS.md  WEEK1_RESEARCHER_BRIEF.md
experiments/: README.md
experiments/week03-baseline/: README.md  RUNBOOK.md
experiments/week04-poisoning/: README.md  RUNBOOK.md
experiments/week06-detector/: README.md  RUNBOOK.md
experiments/week07-scalability/: README.md  RUNBOOK.md
paper-draft/: README.md
papers/: README.md
papers/christina/: README.md  Week1.txt  week1-workflow-test.md
papers/floyd/: README.md  WEEK 1.rtf  Week1-floyd-zhang-2022-bytetrack.docx  week1.md  (+1 more)
patches/: 0001-Add-PRIME-ReID-poison-and-export-hooks.patch  README.md
results/: README.md
scripts/: analyze_embedding_export.py  check_research_readiness.py  organize_blindspot_data.py  run_synthetic_experiment.py  setup_repo.py  smoke_test.py
tests/: test_poison_detector.py
(+12 files in other folders)
